[package]
name = "sar-auto-splitter"
version = "0.1.0"
authors = ["Kitlith <kitlith@kitl.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asl = { path = "asl" }
parking_lot = { version = "0.7.1", features = ["nightly"] }

[profile.release]
lto = true
panic = "abort"
